...
                android:fontFamily="@font/kanit"
                android:text="Profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <!-- Search icon to toggle searchbar visibility-->
            <ImageButton
                android:id="@+id/headerSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="48dp"
                android:maxHeight="48dp"
...
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_edit_text_background"
                android:hint="Search users..."
                android:padding="8dp" />
...
